--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "license": "ISC",
   "author": "AlexKomz",
+  "type": "module",
   "scripts": {
     "start": "cross-env NODE_ENV=production node app.js",
     "server": "nodemon app.js"
@@ -14,6 +15,8 @@
   },
   "dependencies": {
     "config": "^3.3.6",
-    "express": "^4.17.1"
+    "cross-env": "^7.0.3",
+    "express": "^4.17.1",
+    "socket.io": "^4.4.0"
   }
 }
